Fixed nemt page eligibility map on mobile

--- a/static/unminified-static/stylesheets/page.css
+++ b/static/unminified-static/stylesheets/page.css
@@ -602,12 +602,16 @@ section.non-medical-transportation-bottom-page {
     }
 
     .eligibility-map-wrapper.pop-up-modal {
-        height: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem;
+        height: 100%;
     }
 
     .eligibility-map-wrapper.pop-up-modal img {
-        width: 100%;
         height: 100%;
+        width: auto;
     }
     
     ul.section-list-container.nemt-page {
@@ -657,6 +661,13 @@ section.non-medical-transportation-bottom-page {
     
     .section-title.driver-safety span.top-header-text {
         color: rgb(var(--secondary-color))
+    }
+
+    @media(max-width: 768px) {
+        .eligibility-map-wrapper.pop-up-modal img {
+            width: 100%;
+            height: auto;
+        }
     }
     
     @media(max-width: 1200px) {
